# dsrl

./: .gitignore  .gitmodules  README.md  env_utils.py  environment.yml  requirements.txt  setup.cfg  train_dsrl.py  utils.py
cfg/gym/: dsrl_halfcheetah.yaml  dsrl_hopper.yaml  dsrl_walker.yaml
cfg/robomimic/: dsrl_can.yaml  dsrl_lift.yaml  dsrl_transport.yaml
envs/dexmimicgen/: demo_random_action.py  dexmimicgen_env.py  dsrl_mimicgen_actor.py  mimicgen_env.py  run_vpl.py  vpl_simulation_base.py
envs/metaworld/: expert_eval.py  multimodality_eval.py  mw_smolvla_eval.py  tasks_metaworld.json  vis.py
scripts/: aloha_rendering_fix.py  aloha_wrappers.py  calculate_eval_stats.py  eval_pusht_models.py  lerobot_dsrl.py  sac_examples.py
scripts/visuomotor/: build_dmg_env.py  sac_config.yaml  train_sac.py  vpl_dsrl_wrappers.py
