[metadata]
name = dsrl
version = 0.1.0
description = Deep Skill RL framework
author = Your Name
author_email = you@example.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    wandb
    gym-hil
    tensorboard
    gym-pusht


python_requires = >=3.10